adjusting vector reclal testing